--- a/QuiCLI/QuiCLI.csproj
+++ b/QuiCLI/QuiCLI.csproj
@@ -12,6 +12,7 @@
 	  <PackageProjectUrl>https://github.com/FrodeHus/QuiCLI</PackageProjectUrl>
 	  <RepositoryUrl>https://github.com/FrodeHus/QuiCLI</RepositoryUrl>
 	  <RepositoryType>git</RepositoryType>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +21,13 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="QuiCLI.Tests" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
