--- a/QuiCLI/QuiCLI.csproj
+++ b/QuiCLI/QuiCLI.csproj
@@ -1,34 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-	  <IsTrimmable>true</IsTrimmable>
-	  <IsAotCompatible Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net7.0'))"></IsAotCompatible>
-	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-	  <Title>QuiCLI</Title>
-	  <Authors>frodehus</Authors>
-	  <Description>Lightweight framework for building CLI applications with the primary focus of being AOT-compatible.</Description>
-	  <PackageProjectUrl>https://github.com/FrodeHus/QuiCLI</PackageProjectUrl>
-	  <RepositoryUrl>https://github.com/FrodeHus/QuiCLI</RepositoryUrl>
-	  <RepositoryType>git</RepositoryType>
-	  <PackageReadmeFile>README.md</PackageReadmeFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Version>0.0.1</Version>
+		<IsTrimmable>true</IsTrimmable>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>QuiCLI</Title>
+		<Authors>frodehus</Authors>
+		<Description>Lightweight framework for building CLI applications with the primary focus of being AOT-compatible.</Description>
+		<PackageProjectUrl>https://github.com/FrodeHus/QuiCLI</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/FrodeHus/QuiCLI</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-  </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<IsAotCompatible>True</IsAotCompatible>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<IsAotCompatible>True</IsAotCompatible>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="QuiCLI.Tests" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Include="..\README.md">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 </Project>
