Refine attributes, update docs, and enable trimming
Updated CommandBuilder and ICommandBuilder to use more specific DynamicallyAccessedMembers attributes, improving performance and reducing metadata. Enhanced README with detailed CLI usage examples. Marked SampleApp as trimmable in the project file to reduce app size.

--- a/Samples/SampleApp/SampleApp.csproj
+++ b/Samples/SampleApp/SampleApp.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PublishAot>true</PublishAot>
+		<IsTrimmable>true</IsTrimmable>
 		<InvariantGlobalization>true</InvariantGlobalization>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 	</PropertyGroup>
