--- a/Samples/SampleApp/SampleApp.csproj
+++ b/Samples/SampleApp/SampleApp.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PublishTrimmed>true</PublishTrimmed>
 		<PublishAot>true</PublishAot>
 		<IsTrimmable>true</IsTrimmable>
 		<InvariantGlobalization>true</InvariantGlobalization>
@@ -13,6 +14,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\QuiCLI\QuiCLI.csproj" />
+		<TrimmerRootAssembly Include="QuiCLI" />
 	</ItemGroup>
 
 </Project>
